--- a/docker_django/frontend/package.json
+++ b/docker_django/frontend/package.json
@@ -17,18 +17,23 @@
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
+    "fibers": "^4.0.2",
     "fsevents": "^1.2.9",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "axios": "^0.19.2",
+    "file-loader": "^6.0.0",
+    "font-awesome": "^4.7.0",
     "react-alert": "^6.0.0",
     "react-alert-template-basic": "^1.0.0",
     "react-redux": "^7.2.0",
