--- a/Pipfile
+++ b/Pipfile
@@ -7,9 +7,11 @@ verify_ssl = true
 pylint = "*"
 
 [packages]
-django = "*"
 djangorestframework = "*"
 django-rest-knox = "*"
+django = "*"
+psycopg2-binary = "*"
+django-environ = "*"
 
 [requires]
 python_version = "3.7"
