--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-asgiref==3.2.3
-cffi==1.13.2
+asgiref==3.2.7
+cffi==1.14.0
 cryptography==2.8
-Django==3.0.3
+Django==3.0.4
+django-environ==0.4.5
 django-rest-knox==4.1.0
 djangorestframework==3.11.0
-pycparser==2.19
+psycopg2-binary==2.8.4
+pycparser==2.20
 pytz==2019.3
-six==1.13.0
-sqlparse==0.3.0
+six==1.14.0
+sqlparse==0.3.1
